--- a/chatgpt_test/templates/index.html
+++ b/chatgpt_test/templates/index.html
@@ -3,17 +3,17 @@
   <title>OpenAI Chat GPT</title>
   <link
     rel="shortcut icon"
-    href="{{ url_for('static', filename='dog.png') }}"
+    href="{{ url_for('static', filename='chatgpt.png') }}"
   />
   <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}" />
 </head>
 
 <body>
-  <img src="{{ url_for('static', filename='dog.png') }}" class="icon" />
+  <img src="{{ url_for('static', filename='chatgpt.png') }}" class="icon" />
   <h3>Ask Chat GPT</h3>
   <form action="/" method="post">
     <input type="text" name="message" placeholder="Enter a Qestion to Chat GPT" required />
-    <input type="submit" value="Ask Chat GPT" />
+    <input type="submit" value="Ask" />
   </form>
   {% if result %}
   <div class="result">{{ result }}</div>
