--- a/proposal_writer/templates/index.html
+++ b/proposal_writer/templates/index.html
@@ -13,7 +13,7 @@
   <h3>Write Proposal</h3>
   <form action="/" method="post">
     <input type="text" name="message" size="50" placeholder="Enter a the details " required />
-    <input type="submit" value="Ask" />
+    <input type="submit" value="Write" />
     
   </form>
   {% if result %}
